Fixed z-index of the detail-overlay

--- a/styles/page.scss
+++ b/styles/page.scss
@@ -27,7 +27,7 @@
         position: absolute;
         right: 100%;
         width: 90%;
-        z-index: $z-index-1;
+        z-index: $z-index-5;
         @include transition( transform 0.3s ease-in );
 
         @include screenBreakpointMedium {
